--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,7 @@
     "materialize": "^1.0.0",
     "pdfjs-dist": "^2.1.266",
     "pdfjs-dist-viewer-min": "^2.1.266",
-    "vue-ui": "https://github.com/vuejs/ui.git#^0.9.2"
+    "vue-ui": "https://github.com/vuejs/ui.git#^0.9.2",
+    "jquery": "^3.4.0"
   }
 }
