--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "vue": "^2.6.10",
     "vue-router": "^3.0.5",
+    "axios": "^0.19.0",
     "vue-i18n": "^8.10.0",
     "vue-grid": "^0.1.2",
     "font-awesome": "^5.8.1",
