atualizando package.json 2

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "leitor",
   "version": "1.0.0",
-  "main": "./wdi_node_express.js",
   "description": "Leitor",
   "author": "José Wdison de Souza <wdison@hotmail.com>",
   "directories": {
@@ -10,5 +9,8 @@
   "license": "MIT",
   "engines": {
     "node": ">= 6.0.0"
+  },
+  "scripts": {
+    "start": "node wdi_node_express.js"
   }
 }
