--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   },
   "license": "MIT",
   "engines": {
-    "node": ">= 6.0.0"
+    "node": ">= 10.x"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   },
   "scripts": {
     "start": "node wdi_node_express.js"
