--- a/package.json
+++ b/package.json
@@ -2,18 +2,13 @@
   "name": "leitor",
   "version": "1.0.0",
   "description": "Leitor",
+  "main":"wdi_node_express.js",
   "author": "José Wdison de Souza <wdison@hotmail.com>",
-  "directories": {
-    "lib": "./lib2"
-  },
   "license": "MIT",
   "engines": {
     "node": ">= 10.x"
   },
   "dependencies": {
     "express": "^4.17.1"
-  },
-  "scripts": {
-    "start": "node wdi_node_express.js"
   }
 }
